docs/api/qiskit/0.19/qiskit.transpiler.passes.MergeAdjacentBarriers.mdx
---
title: MergeAdjacentBarriers (v0.19)
description: API reference for qiskit.transpiler.passes.MergeAdjacentBarriers in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.MergeAdjacentBarriers
---

# MergeAdjacentBarriers

<Class id="qiskit.transpiler.passes.MergeAdjacentBarriers" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/utils/merge_adjacent_barriers.py" signature="MergeAdjacentBarriers(*args, **kwargs)" modifiers="class">
  Return a circuit with any adjacent barriers merged together.

  Only barriers which can be merged without affecting the barrier structure of the DAG will be merged.

  Not all redundant barriers will necessarily be merged, only adjacent barriers are merged.

  For example, the circuit:

  ```python
  qr = QuantumRegister(3, 'q')
  circuit = QuantumCircuit(qr)
  circuit.barrier(qr[0])
  circuit.barrier(qr[1])
  circuit.barrier(qr)
  ```

  Will be transformed into a circuit corresponding to:

  ```python
  circuit.barrier(qr[0])
  circuit.barrier(qr)
  ```

  after one iteration of the pass. These two barriers were not merged by the first pass as they are not adjacent in the initial circuit.

  The pass then can be reapplied to merge the newly adjacent barriers.

  ## Attributes

  <span id="mergeadjacentbarriers-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.MergeAdjacentBarriers.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="mergeadjacentbarriers-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.MergeAdjacentBarriers.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="mergeadjacentbarriers-name" />

  ### name

  <Function id="qiskit.transpiler.passes.MergeAdjacentBarriers.name" signature="MergeAdjacentBarriers.name()">
    Return the name of the pass.
  </Function>

  <span id="mergeadjacentbarriers-run" />

  ### run

  <Function id="qiskit.transpiler.passes.MergeAdjacentBarriers.run" signature="MergeAdjacentBarriers.run(dag)">
    Run the MergeAdjacentBarriers pass on dag.
  </Function>
</Class>

