docs/api/qiskit/0.45/qiskit.transpiler.passes.MergeAdjacentBarriers.mdx
---
title: MergeAdjacentBarriers
description: API reference for qiskit.transpiler.passes.MergeAdjacentBarriers
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.MergeAdjacentBarriers
---

# MergeAdjacentBarriers

<Class id="qiskit.transpiler.passes.MergeAdjacentBarriers" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/transpiler/passes/utils/merge_adjacent_barriers.py" signature="qiskit.transpiler.passes.MergeAdjacentBarriers(*args, **kwargs)">
  Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Return a circuit with any adjacent barriers merged together.

  Only barriers which can be merged without affecting the barrier structure of the DAG will be merged.

  Not all redundant barriers will necessarily be merged, only adjacent barriers are merged.

  For example, the circuit:

  ```python
  qr = QuantumRegister(3, 'q')
  circuit = QuantumCircuit(qr)
  circuit.barrier(qr[0])
  circuit.barrier(qr[1])
  circuit.barrier(qr)
  ```

  Will be transformed into a circuit corresponding to:

  ```python
  circuit.barrier(qr[0])
  circuit.barrier(qr)
  ```

  i.e,

  ```python
        ░  ░             ░  ░
  q_0: ─░──░─      q_0: ─░──░─
        ░  ░             ░  ░
  q_1: ─░──░─  =>  q_1: ────░─
        ░  ░                ░
  q_2: ────░─      q_2: ────░─
           ░
  ```

  after one iteration of the pass. These two barriers were not merged by the first pass as they are not adjacent in the initial circuit.

  The pass then can be reapplied to merge the newly adjacent barriers.

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.MergeAdjacentBarriers.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.MergeAdjacentBarriers.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### execute

  <Function id="qiskit.transpiler.passes.MergeAdjacentBarriers.execute" name="execute" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.12)")) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)") *| None*) – A callback function which is caller per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.12)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.12)"), [qiskit.passmanager.compilation\_status.PassManagerState](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")]
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.MergeAdjacentBarriers.name" name="name" signature="name()">
    Name of the pass.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.MergeAdjacentBarriers.run" name="run" signature="run(dag)">
    Run the MergeAdjacentBarriers pass on dag.
  </Function>

  ### update\_status

  <Function id="qiskit.transpiler.passes.MergeAdjacentBarriers.update_status" name="update_status" signature="update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – Pass manager state to update.
    *   **run\_state** (*RunState*) – Completion status of current task.

    **Returns**

    Updated pass manager state.

    **Return type**

    [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")
  </Function>
</Class>

